kubernetes/Splunk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk-web
  namespace: splunk-cluster
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: splunk.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: splunk-searchhead
            port:
              number: 8000
